# univ

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  barneshut.rs  main.rs  physics.rs  univ.rs
config/: 2gal.toml  asteroid.toml  cfg.toml  default.toml
src/: barneshut.rs  config.rs  main.rs  physics.rs  tests.rs  univ.rs
